2018-08-24  Toshihiko Kawano  <kawano@lanl.gov>

	* source/dece.cpp (DeceMain): 

2018-05-02  Toshihiko Kawano  <kawano@lanl.gov>

	* source/endfio.cpp (ENDFReadMF2): bug fixed
	URR for LFW=0 and LRF=1 case

2018-01-18  Toshihiko Kawano  <kawano@lanl.gov>

	* source/decetable33.cpp (DeceTableMF33): modified
	* source/decetable34.cpp (DeceTableMF34): modified
	energy unit changed from MeV to eV

2017-12-24  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable34.cpp: new file
	tabulate angular distribution covariance

	* source/deceqvalue.cpp: new file
	modify Qvalue

2017-12-19  Toshihiko Kawano  <kawano@lanl.gov>

	* source/endfio.cpp (ENDFReadMF8): bug fixed
	* source/decetable8.cpp (DeceTableMF8MT457): bug fixed
	MF8 read/write bug for some cases fixed

2017-09-14  Toshihiko Kawano  <kawano@lanl.gov>

	* source/endfio.cpp (ENDFReadMF2): updated
	* source/decetable2.cpp (DeceTableMF2AP): new function
	energy-dependent AP for URR added

2017-08-11  Toshihiko Kawano  <kawano@lanl.gov>

	* source/decetable6.cpp: updated
	main function divided into small subroutines
	tabulation of Law7 added

	* tools/decemacs.cpp (main): modified
	T9 input allowed as a negative value in the first command line options

2016-12-20  Toshihiko Kawano  <kawano@lanl.gov>

	* source/decetable14.cpp: new file
	qucik made for tabulating MF14
	LTT =2 case not tested yet

2016-12-04  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcs1.cpp: updated
	gcc4 hack, cstdlib.h added

	* source/Makefile.am (dece_SOURCES): bug fixed
	add missing file

2016-11-29  Toshihiko Kawano  <kawano@lanl.gov>

	* source/decetable12.cpp (DeceTableMF12): bug fixed
	total photon yield printing part was missing

2016-09-22  Toshihiko Kawano  <kawano@lanl.gov>

	* tools/decemf6.cpp (mf6spec): bug fixed
	special case, when all spectra are zero, add dummy point at the highest energy

2016-10-23  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (DeceRead): modified